--- a/cartstyles.css
+++ b/cartstyles.css
@@ -94,8 +94,8 @@ hr {
     text-transform: uppercase; 
 }
 .btn-primary-color { 
-    background-color: #000000; 
-    color: white; 
+    background-color: #ff9999; 
+    color: black; 
     margin-right: 5px; 
 }
 .btn-secondary-color { 
