--- a/log-reg.css
+++ b/log-reg.css
@@ -8,24 +8,25 @@ body {
     margin: 0;
     font-family: "Inter", sans-serif;
     display: flex;
-    align-items: center;
     justify-content: center;
     background: none;
 }
 
 .container {
-    width: 500px;
+    position: relative;
+    width: 700px;
     border-radius: 25px;
-    overflow: hidden;
-    margin-top: 50px;
+    margin-top: 65px;
     background-color: #F8FAFC;
-
+    overflow: hidden;
 }
 
 .tab-header {
+    position: relative;
+    margin-top: 0px;
     display: flex;
     width: 100%;
-    height: 50px;
+    height: 60px;
 }
 
 .tab {
@@ -42,21 +43,22 @@ body {
 .tab.active {
     background-color: #142650;
     color: #FFFFFF;
-
 }
 
 label {
     display: block;
-    font-size: 14px;
+    font-size: 16px;
     margin: 10px 0;
 }
 
 input[type=text],
 input[type=password] {
+    padding: 10px;
     width: 100%;
-    height: 25px;
+    height: 40px;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.1);
     border: none;
+    outline: none;
 }
 
 input[type=checkbox] {
@@ -65,7 +67,12 @@ input[type=checkbox] {
     background-color: #E9EFF5;
     position: relative;
     top: 1px;
+    outline: none;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.1);
+}
+
+input:focus {
+    box-shadow: 0 0 5px #142650;
 }
 
 .input-eye {
@@ -75,16 +82,21 @@ input[type=checkbox] {
 
 .eye {
     position: absolute;
-    width: 13px;
-    height: 13px;
-    top: 6px;
-    right: 5px;
+    width: 16px;
+    height: 16px;
+    top: 13px;
+    right: 10px;
     cursor: pointer;
     opacity: 0.5;
 }
 
 form {
     padding: 15px 40px;
+    top: 50px;
+}
+
+.red {
+    color: red;
 }
 
 .hidden {
