--- a/popupLogin.css
+++ b/popupLogin.css
@@ -1,5 +1,17 @@
+.hidden {
+    display: none;
+}
+
 #openLogin {
+    position: relative;
     cursor: pointer;
+    align-items: center;
+}
+
+#user-menu {
+    position: relative;
+    display: inline-block;
+    z-index: 1002;
 }
 
 #popupLogin.hidden {
@@ -11,14 +23,42 @@
     inset: 0;
     background: rgba(0, 0, 0, 0.4);
     display: flex;
-    align-items: center;
     justify-content: center;
-    z-index: 999;
+    align-items: center;
+    z-index: 1001;
 }
 
 #popupLogin iframe {
+    top: 0px;
     width: 420px;
-    height: 600px;
+    height: 700px;
     border: none;
     border-radius: 10px;
+}
+
+#dropUser {
+    position: absolute;
+    top: 65px;
+    right: 150px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.5);
+    width: 150px;
+    z-index: 2001;
+}
+
+#dropUser ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#dropUser li {
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+
+#dropUser li:hover {
+    background-color: #f5f5f5;
 }
