--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,7 @@ header {
     padding: 0 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 30px;
 }
 
@@ -47,7 +48,22 @@ header {
     font-weight: bold;
     font-size: 18px;
     white-space: nowrap;
+    background-color: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.logo img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+
+.logo span {
+    margin-left: 10px;
+}
+
 
 .header-right {
     display: flex;
@@ -194,6 +210,7 @@ nav.main-menu {
     align-items: center;
     gap: 10px;
     cursor: pointer;
+    pointer-events: none;
     color: black;
 }
 
@@ -495,11 +512,6 @@ section.products h2 {
     justify-content: center;
 }
 
-.pagination button:hover:not(:disabled) {
-    background: #f8f9fa;
-    border-color: #999;
-}
-
 .pagination button.active {
     background: #d6453b;
     color: #fff;
@@ -625,10 +637,14 @@ footer {
 }
 
 .footer-left {
-    width: 120px;
-    height: 72px;
-    background: #ddd;
-    border-radius: 6px;
+    width: 100px;
+    overflow: hidden;
+}
+
+.footer-left img {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .footer-col {
@@ -662,8 +678,14 @@ footer {
 .social-box {
     width: 28px;
     height: 28px;
-    background: #ddd;
+    background-color: transparent !important;
     border-radius: 6px;
+    overflow: hidden;
+}
+
+.social-box img {
+    width: 100%;
+    height: 100%;
 }
 
 .footer-bottom {
