--- a/WebBanLap-main/assets/css/log-reg.css
+++ b/WebBanLap-main/assets/css/log-reg.css
@@ -1,4 +1,4 @@
-#popupLogin .poupupLogin {
+.poupupLogin {
     margin: 0;
     font-family: "Inter", sans-serif;
     display: flex;
@@ -6,7 +6,7 @@
     background: none;
 }
 
-#popupLogin .logreg-container {
+.logreg-container {
     position: relative;
     width: 700px;
     border-radius: 25px;
@@ -15,7 +15,7 @@
     overflow: hidden;
 }
 
-#popupLogin .tab-header {
+.tab-header {
     position: relative;
     margin-top: 0px;
     display: flex;
@@ -23,7 +23,7 @@
     height: 60px;
 }
 
-#popupLogin .tab {
+.tab {
     flex: 1;
     display: flex;
     align-items: center;
@@ -34,19 +34,19 @@
     font-size: 16px;
 }
 
-#popupLogin .tab.active {
+.tab.active {
     background-color: #142650;
     color: #FFFFFF;
 }
 
-#popupLogin label {
+label {
     display: block;
     font-size: 16px;
     margin: 10px 0;
 }
 
-#popupLogin input[type=text],
-#popupLogin input[type=password] {
+input[type=text],
+input[type=password] {
     padding: 10px;
     width: 100%;
     height: 40px;
@@ -55,7 +55,7 @@
     outline: none;
 }
 
-#popupLogin input[type=checkbox] {
+input[type=checkbox] {
     appearance: auto;
     margin: 5px;
     border: none;
@@ -66,16 +66,16 @@
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.1);
 }
 
-#popupLogin input:focus {
+input:focus {
     box-shadow: 0 0 5px #142650;
 }
 
-#popupLogin .input-eye {
+.input-eye {
     position: relative;
     width: 100%;
 }
 
-#popupLogin .eye {
+.eye {
     position: absolute;
     width: 16px;
     height: 16px;
@@ -85,30 +85,30 @@
     opacity: 0.5;
 }
 
-#popupLogin form {
+form {
     padding: 15px 40px;
     top: 50px;
 }
 
-#popupLogin .red {
+.red {
     color: red;
 }
 
-#popupLogin .hidden {
+.hidden {
     display: none;
 }
 
-#popupLogin #forgotpsw {
+#forgotpsw {
     text-align: right;
     font-size: 14px;
     margin-bottom: 5px
 }
 
-#popupLogin #forgotpsw a {
+#forgotpsw a {
     color: black;
 }
 
-#popupLogin .logreg-button {
+.logreg-button {
     width: 100%;
     background-color: #F3EA28;
     padding: 12px;
@@ -118,13 +118,13 @@
     font-size: 16px;
 }
 
-#popupLogin #chooseLogin {
+#chooseLogin {
     text-align: center;
     padding: 10px;
     font-size: 14px;
 }
 
-#popupLogin #chooseLogin a {
+#chooseLogin a {
     color: black;
     font-weight: bold;
 }
